iowow (1.4.18) UNRELEASED; urgency=medium

  * Added iwxstr_printf_alloc() (iwxstr.h)
  * Copyright updated
  * Added new iwjsreg.h module - simple JSON key-value file store with atomic
  updates.
  * Allowed to construct JBL_NODE without IWPOOL ini this case node data will
  be allocated by malloc and should be freed by visitor.

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 05 Feb 2024 19:28:56 +0700

iowow (1.4.17) testing; urgency=medium

  * Added void iwulist_reset(IWULIST *list) (iwarr.h)
  * Added experimental jbn_from_js() (iwjson.h)
  * Fixed C++ compilation errors https://github.com/Softmotions/ejdb/issues/381
  * Fixed Correct UCS-16 surrogate pair start code point. #51
  * Added iwchars.h replacing some ctype.h functions.
  * Added simple refcounting container iwrefs.h
  * Fixed incorrect parsing of empty JSON keys.
  * Added jbn_as_xml() (iwjson.h)
  * Added jbn_get() (iwjson.h)
  * Added IW_ERROR_OPERATION_TIMEOUT common error code.
  * Removed support of legacy iwkv v1 data file format.
  * Fixed incorrect read of memory bytes (reported by valgrind)
  * Fixed windows build
  * Added ref counting feature to iwpool (iwpool.h)

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 13 Nov 2023 23:29:35 +0700

iowow (1.4.16) testing; urgency=medium

  * Fixed behavior of iwp_tmpdir() accourding to #47
  * Fixed  Incorrect serialization of INT64_MIN by iwitoa() #48 (iwconv.h)
  * Added iwxstr_insert() (iwxstr.h)
  * ~8% IO performance improvements due to use of MADV_RANDOM
  * Fixed Github Vulnerability Report GHSL-2022-066
  * Added additional IW_ERROR_XX codes (iwlog.h)
  * Added VERBOSE log level (iwlog.h)
  * Added iwhmap_put_str() (iwhmap.h)
  * Added iwulist_remove_first_by(), iwulist_find_first() (iwarr.h)
  * Added iwxstr_new_printf() (iwxstr.h)
  * Reduced iwkv code complexity. Removed in-memory db cache since benchmarks shows only minor perf imprivements with cache.
  * Fixed many of UB errors (eg: misaligned access)